Add grid size and reset buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <header>
+        <h1>Etch-a-Sketch</h1>
+        <div class="options">
+            <button type="button" title="Grid size" class="size">Choose grid size</button>
+            <button type="button" title="Reset grid" class="reset">Reset grid</button>
+        </div>
+    </header>
     <div class="container"></div>
 </body>
 </html>
